@@ -69,21 +69,6 @@ public class SimpleUserManager implements UserManager {
       emailAddr = xml.getStringValue("email-address");
     } catch (ConfigException e) {}
 
-    String startDate = null;
-    try {
-      startDate = xml.getStringValue("start-date");
-    } catch (ConfigException e) {}
-
-    String expirationDate = null;
-    try {
-      expirationDate = xml.getStringValue("expiration-date");
-    } catch (ConfigException e) {}
-
-    int EcmRate = -1;
-    try {
-      EcmRate = xml.getIntValue("ecm-rate");
-    } catch (ConfigException e) {}
-
     int maxConnections = xml.getIntValue("max-connections", -1);
 
     boolean enabled = "true".equalsIgnoreCase(xml.getStringValue("enabled", "true"));
@@ -92,7 +77,7 @@ public class SimpleUserManager implements UserManager {
     boolean debug = "true".equalsIgnoreCase(xml.getStringValue("debug", "false"));
 
     UserEntry user = new UserEntry(xml.getStringValue("name"), xml.getStringValue("password"), ipMask, emailAddr,
-        maxConnections, enabled, admin, exclude, startDate, expirationDate, EcmRate, debug);
+        maxConnections, enabled, admin, exclude, debug);
 
     try {
       user.displayName = xml.getStringValue("display-name");
@@ -178,18 +163,6 @@ public class SimpleUserManager implements UserManager {
     else return entry.maxConnections;
   }
 
-  public String getStartDate(String user) {
-    UserEntry entry = getUser(user);
-    if(entry == null) return null;
-    else return entry.startDate;
-  }
-
-  public String getExpirationDate(String user) {
-    UserEntry entry = getUser(user);
-    if(entry == null) return null;
-    else return entry.expirationDate;
-  }
-
   public Set getAllowedProfiles(String user) {
     UserEntry entry = getUser(user);
     if(entry == null) {
@@ -253,9 +226,7 @@ public class SimpleUserManager implements UserManager {
   }
 
   public int getAllowedEcmRate(String user) {
-    UserEntry entry = getUser(user);
-    if(entry == null) return -1; // return minimum interval between ecm in seconds, -1 for no limit
-    else return entry.EcmRate;
+    return -1; // return minimum interval between ecm in seconds, -1 for no limit
   }
 
   static class UserEntry {
@@ -263,13 +234,12 @@ public class SimpleUserManager implements UserManager {
     String name, password;
     String ipMask;
     String email, displayName;
-    String startDate, expirationDate;
-    int maxConnections, EcmRate;
+    int maxConnections;
     boolean enabled, admin, exclude, debug;
     Set profiles = new HashSet();
 
     public UserEntry(String name, String password, String ipMask, String email, int maxConnections, boolean enabled,
-                     boolean admin, boolean exclude, String startDate, String expirationDate, int EcmRate, boolean debug)
+                     boolean admin, boolean exclude, boolean debug)
     {
       this.name = name;
       this.displayName = name;
@@ -280,9 +250,6 @@ public class SimpleUserManager implements UserManager {
       this.enabled = enabled;
       this.admin = admin;
       this.exclude = exclude;
-      this.startDate = startDate;
-      this.expirationDate = expirationDate;
-      this.EcmRate = EcmRate;
       this.debug = debug;
     }
 
