@@ -15,6 +15,8 @@ Cardservproxy changelog:
 - Fixed: The default-deny-list wasn't checked for CspConnect connection attempts.
 - Fixed: Closing of old sessions (on new login) wasn't working for ExtNewcamd.
 - Fixed: Debug mode for the "*" pseudo profile (Csp, ExtNewcamd) couldn't be turned off via config (attribute ignored).
+- Fixed: Removing a profile from a user that had used csp-connect had no effect, as it remained locally cached at the
+  client proxy, and no mechanism existed for removing it or blocking the now disallowed requests.
 - Changed: Two ecms (or dcw replies) with the same payload data but different dvb table ids (even/0x80 vs odd/0x81) are
   now considered identical by the proxy. Implications unknown.
 - Changed: ClusteredCache transport format now includes meta-data such as ca-id and network-id.
@@ -28,8 +30,7 @@ Cardservproxy changelog:
 - Added: More sanity checks to DcwFilterPlugin (checksums, length and an option to monitor all replies for duplicates).
 - Added: DreamboxPlugin (csp-agent) support for more/older dm500 images. Basic (unsecured) file upload support.
 - Added: proxy-reference.html updated with highlighting for important elements and additional examples.
-- Added: Ability to set start and expiration date for user accounts (only Simple and XmlUsermanager).
-- Added: Ability to set minimum interval between ecm's in seconds (only Simple and XmlUsermanager).
+- Added: New TestUserManager to show how to add um-specific functionality without changing the core or existing um's.
 
 - Changes to proxy.xml:
   Added: Attribute 'enable-service-linking' to <cache-handler> (true/false, default: false). Enables sid cache linker.
